<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.posapp.MainActivity">
    
    <!-- عنصر إضافة/اختيار عميل - يظهر كأيقونة في الـ toolbar -->
    <item
        android:id="@+id/action_add_customer"
        android:icon="@drawable/ic_customers"
        android:title="@string/select_customer"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_counter"
        android:title="@string/home"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_manage_customers"
        android:icon="@drawable/ic_customers"
        android:title="@string/customers_management"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_manage_products"
        android:icon="@drawable/ic_products"
        android:title="@string/products_management"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_inventory_management"
        android:icon="@drawable/ic_items"
        android:title="@string/inventory_management"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_all_invoices"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/all_invoices"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_select_customer_location"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/customer_locations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>